--- a/Test0315/pom.xml
+++ b/Test0315/pom.xml
@@ -13,6 +13,7 @@
     <spring-data.version>1.2.0.RELEASE</spring-data.version>
   </properties>
 
+
   <dependencies>
   <dependency>
     <groupId>junit</groupId>
@@ -83,22 +84,40 @@
   </dependency>
 
   <dependency>
-    <groupId>org.json</groupId>
-    <artifactId>json</artifactId>
-    <version>20080701</version>
-  </dependency>
-
-  <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
     <version>4.0.0-b01</version>
   </dependency>
 
-  <!--
-Attention: Be sure nothing pulls in an old dependency with groupId
-"freemarker" (without the "org."), because then you will end up with
-two freemarker.jar-s and unpredictable behavior!
--->
+    <!--引入json-->
+    <!--<dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.1.4</version>
+    </dependency>-->
+
+    <!-- 引入fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.7</version>
+    </dependency>
+
+    <!--
+  Attention: Be sure nothing pulls in an old dependency with groupId
+  "freemarker" (without the "org."), because then you will end up with
+  two freemarker.jar-s and unpredictable behavior!
+  -->
   <dependency>
     <groupId>org.freemarker</groupId>
     <artifactId>freemarker</artifactId>
