--- a/Test0315/pom.xml
+++ b/Test0315/pom.xml
@@ -89,6 +89,18 @@
     <version>4.0.0-b01</version>
   </dependency>
 
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3</version>
+    </dependency>
+
     <!--引入json-->
     <!--<dependency>
       <groupId>org.codehaus.jackson</groupId>
